--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,5 +3,6 @@
  @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
  @import "project/core";
  @import "project/content";
+ @import "project/navbar";
 
 
