--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,5 +4,6 @@
  @import "project/core";
  @import "project/content";
  @import "project/navbar";
-
+ @import "project/panel";
+ @import "project/type";
 
