--- a/resources/assets/sass/project/_navbar.scss
+++ b/resources/assets/sass/project/_navbar.scss
@@ -12,4 +12,22 @@
 
 		}
 	}
+
+	.navbar-nav {
+		>li{
+			>a{
+				&.navbar-btn{
+					padding:   	6px 12px;
+
+					&.btn{
+						border :none;
+						&.btn-primary{
+						@include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+						}
+					}
+					
+				}
+			}
+		}
+	}
 }
